--- a/dawazonBackend/dawazonBackend.csproj
+++ b/dawazonBackend/dawazonBackend.csproj
@@ -23,7 +23,8 @@
         <PackageReference Include="HotChocolate.Data.EntityFramework" Version="15.1.12" />
         <PackageReference Include="HotChocolate.Subscriptions.InMemory" Version="15.1.12" />
         <PackageReference Include="MailKit" Version="4.14.1" />
-        <PackageReference Include="Microsoft.AspNetCore.Authentication.JwtBearer" Version="10.0.2" />
+        <PackageReference Include="Microsoft.AspNetCore.Authentication.JwtBearer" Version="10.0.3" />
+        <PackageReference Include="Microsoft.AspNetCore.Identity.EntityFrameworkCore" Version="10.0.3" />
         <PackageReference Include="Microsoft.AspNetCore.OpenApi" Version="10.0.2" />
         <PackageReference Include="Microsoft.EntityFrameworkCore" Version="10.0.2" />
         <PackageReference Include="Microsoft.EntityFrameworkCore.InMemory" Version="10.0.1" />
@@ -46,7 +47,6 @@
     </ItemGroup>
 
     <ItemGroup>
-      <Folder Include="Cart\" />
       <Folder Include="Products\Exceptions\" />
       <Folder Include="Stripe\" />
       <Folder Include="Users\" />
