--- a/dawazon2.0/appsettings.json
+++ b/dawazon2.0/appsettings.json
@@ -11,5 +11,6 @@
     "MaxFileSize": 5242880,
     "AllowedExtensions": [ ".jpg", ".jpeg", ".png", ".gif" ],
     "AllowedContentTypes": [ "image/jpeg", "image/png", "image/gif" ]
-  }
+  },
+  "Development": true
 }
