--- a/dawazon2.0/dawazon2.0.csproj
+++ b/dawazon2.0/dawazon2.0.csproj
@@ -44,4 +44,8 @@
       <PackageReference Include="System.IdentityModel.Tokens.Jwt" Version="8.15.0" />
     </ItemGroup>
 
+    <ItemGroup>
+      <ProjectReference Include="..\dawazonBackend\dawazonBackend.csproj" />
+    </ItemGroup>
+
 </Project>
