--- a/dawazonBackend/dawazonBackend.csproj
+++ b/dawazonBackend/dawazonBackend.csproj
@@ -47,9 +47,9 @@
     </ItemGroup>
 
     <ItemGroup>
+      <Folder Include="Products\Controllers\" />
       <Folder Include="Products\Exceptions\" />
       <Folder Include="Stripe\" />
-      <Folder Include="Users\" />
     </ItemGroup>
 
 </Project>
