--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -1,29 +1,94 @@
-name: Playwright Tests
+name: Playwright CI
 
 on:
-  push: [main, dev]
-  pull_request: [main, dev]
+  push:
+    branches:
+      - main
+      - dev
+  pull_request:
+    branches:
+      - main
+      - dev
 
 jobs:
-  test:
-    runs-on: ubuntu-latest
 
+  build:
+    name: Build Project
+    runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v4
+
+      # Caché de NuGet
+      - name: Cache NuGet packages
+        uses: actions/cache@v3
+        with:
+          path: ~/.nuget/packages
+          key: nuget-${{ hashFiles('**/*.csproj') }}
+          restore-keys: |
+            nuget-
 
       - name: Setup .NET
         uses: actions/setup-dotnet@v4
         with:
           dotnet-version: 10.0.102
 
-      - name: Restore
+      - name: Restore Dependencies
         run: dotnet restore
 
-      - name: Build
+      - name: Build Solution
         run: dotnet build --configuration Release --no-restore
 
-      - name: Install Playwright Browsers
-        run: pwsh bin/Release/net10.0/playwright.ps1 install --with-deps
+  test:
+    name: Run Playwright Tests
+    runs-on: ubuntu-latest
+    needs: build  
+    steps:
+      - uses: actions/checkout@v4
 
+      # Caché de NuGet
+      - name: Cache NuGet packages
+        uses: actions/cache@v3
+        with:
+          path: ~/.nuget/packages
+          key: nuget-${{ hashFiles('**/*.csproj') }}
+          restore-keys: |
+            nuget-
+
+      # Caché de Playwright
+      - name: Cache Playwright Browsers
+        uses: actions/cache@v3
+        with:
+          path: ~/.cache/ms-playwright
+          key: playwright-${{ hashFiles('**/*.csproj') }}
+          restore-keys: |
+            playwright-
+
+      - name: Setup .NET
+        uses: actions/setup-dotnet@v4
+        with:
+          dotnet-version: 10.0.102
+
+      - name: Install Playwright Browsers
+        run: |
+          dotnet tool install --global Microsoft.Playwright.CLI
+          playwright install --with-deps
+
+      # Ejecutar tests y generar reporte en NUnit XML
       - name: Run Tests
-        run: dotnet test --configuration Release --no-build
+        run: |
+          mkdir -p TestResults
+          dotnet test --configuration Release --no-build \
+            --logger "nunit;LogFilePath=TestResults/TestResults.xml"
+
+      # Convertir NUnit XML a HTML usando ReportUnit (opcional)
+      - name: Generate HTML Report
+        run: |
+          dotnet tool install --global ReportUnit
+          ReportUnit TestResults/TestResults.xml TestResults/TestResults.html
+
+      # Subir artefactos (XML + HTML) para descargar desde GitHub
+      - name: Upload Test Results
+        uses: actions/upload-artifact@v3
+        with:
+          name: test-results
+          path: TestResults
