--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -54,6 +54,10 @@ jobs:
         uses: actions/setup-dotnet@v4
         with:
           dotnet-version: 10.0.102
+      - name: Restore & Build Playwright Project
+        run: |
+          dotnet restore ./dawazonPlayWrite/dawazonPlayWrite.csproj
+          dotnet build ./dawazonPlayWrite/dawazonPlayWrite.csproj --configuration Release
       - name: Install Playwright CLI & Browsers
         run: |
           dotnet tool install --global Microsoft.Playwright.CLI
