--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -12,6 +12,7 @@ on:
       - dev
 jobs:
   build:
+    name: Build Project
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v4
@@ -25,6 +26,7 @@ jobs:
           dotnet build --configuration Release
 
   unit-tests:
+    name: Run Unit Tests
     runs-on: ubuntu-latest
     needs: build
     steps:
@@ -46,6 +48,7 @@ jobs:
           path: UnitTestResults
 
   e2e-tests:
+    name: Run Playwright E2E Tests
     runs-on: ubuntu-latest
     needs: build
     steps:
