--- a/dawazon2.0/appsettings.json
+++ b/dawazon2.0/appsettings.json
@@ -12,5 +12,11 @@
     "AllowedExtensions": [ ".jpg", ".jpeg", ".png", ".gif" ],
     "AllowedContentTypes": [ "image/jpeg", "image/png", "image/gif" ]
   },
+  "Stripe": {
+    "Key": ""
+  },
+  "Server": {
+    "Url": "https://www.dawazon.es"
+  },
   "Development": true
 }
