--- a/.gitignore
+++ b/.gitignore
@@ -8,3 +8,6 @@
 */report-ControladorProductos.json
 */report-ControladorAuth.json
 */report-ControladorCarrito.json
+playwright-reports
+*/reports/
+bruno-reports
