--- a/compose.yaml
+++ b/compose.yaml
@@ -1,2 +1,168 @@
-﻿
+﻿services:
+  # BASES DE DATOS
+  redis:
+    image: redis:7-alpine
+    restart: always
+    env_file: .env
+    command: redis-server --requirepass ${REDIS_PASSWORD}
+    volumes:
+      - redis-data:/data
+    ports:
+      - ${REDIS_PORT}:6379
+    networks:
+      - webnet
 
+  postgres:
+    image: postgres:12-alpine
+    restart: always
+    env_file: .env
+    environment:
+      POSTGRES_USER: ${DATABASE_USER}
+      POSTGRES_PASSWORD: ${DATABASE_PASSWORD}
+      POSTGRES_DB: ${POSTGRES_DATABASE}
+    volumes:
+      - postgres-data:/var/lib/postgresql/data
+    networks:
+      - webnet
+    healthcheck:
+      test: ["CMD-SHELL", "pg_isready -U ${DATABASE_USER}"]
+      interval: 5s
+      timeout: 5s
+      retries: 5
+      start_period: 10s
+
+  # APP PRINCIPAL
+  app:
+    build:
+      context: .
+      dockerfile: Dockerfile
+      target: final
+    restart: always
+    env_file: .env
+    environment:
+      ASPNETCORE_ENVIRONMENT: Development
+      Jwt__Key: ${JWT_KEY}
+      Jwt__Issuer: ${JWT_ISSUER}
+      Jwt__Audience: ${JWT_AUDIENCE} 
+      # Stripe
+      Stripe__Key: ${STRIPE_KEY} 
+      # Server
+      Server__Url: ${SERVER_URL} 
+      # Development flag
+      Development: ${DEVELOPMENT}  
+      # SMTP
+      Smtp__Host: ${SMTP_HOST}
+      Smtp__Port: ${SMTP_PORT}
+      Smtp__Username: ${SMTP_USERNAME}
+      Smtp__Password: ${SMTP_PASSWORD}
+      Smtp__AdminEmail: ${SMTP_ADMINEMAIL}
+      # Postgres
+      ConnectionStrings__DefaultConnection: "Host=${POSTGRES_HOST};Port=${POSTGRES_PORT};Database=${POSTGRES_DATABASE};Username=${DATABASE_USER};Password=${DATABASE_PASSWORD}"
+      # Redis
+      Redis__Host: ${REDIS_HOST}
+      Redis__Port: ${REDIS_PORT}
+      Redis__Password: ${REDIS_PASSWORD}
+    healthcheck:
+      test: [ "CMD-SHELL", "wget -qO- http://localhost:8080/health | grep 'healthy'" ]
+      interval: 10s
+      timeout: 3s
+      retries: 12
+      start_period: 10s
+    depends_on:
+      postgres:
+        condition: service_healthy
+      redis:
+        condition: service_started
+    networks:
+      - webnet
+
+  testunit:
+    build:
+      context: .
+      dockerfile: Dockerfile
+      target: testweb
+    restart: always
+    networks:
+      - webnet
+  # SERVICIO PUNTUAL: TESTS BRUNO
+  # Ejecuta los tests, genera HTMLs por carpeta
+  # y un index.html que los enlaza a todos
+
+  bruno-runner:
+    build:
+      context: .
+      dockerfile: Dockerfile-bruno
+    env_file: .env
+    depends_on:
+      app:
+        condition: service_healthy
+    volumes:
+      - ./bruno-reports:/app/dawazonBrunoTest/reports  
+    networks:
+      - webnet
+    restart: "no"                    
+
+  # nginx que sirve los reportes HTML de Bruno
+  
+  brunoweb:
+    image: nginx:alpine
+    restart: always
+    volumes:
+      - ./bruno-reports:/usr/share/nginx/html:ro
+      - ./web/nginx/sites-bruno:/etc/nginx/conf.d:ro
+    networks:
+      - webnet
+
+  # SERVICIO PUNTUAL: TESTS PLAYWRIGHT
+
+  playwright-runner:
+    build:
+      context: .
+      dockerfile: Dockerfile-playWrite
+    env_file: .env
+    depends_on:
+      app:
+        condition: service_healthy
+    volumes:
+      - ./playwright-reports:/app/reports  
+    networks:
+      - webnet
+    restart: "no"                     
+
+  # nginx que sirve el reporte HTML de Playwright
+  playwrightweb:
+    image: nginx:alpine
+    restart: always
+    volumes:
+      - ./playwright-reports/html:/usr/share/nginx/html
+      - ./web/nginx/sites-playwright:/etc/nginx/conf.d:ro
+    networks:
+      - webnet
+
+  # PROXY INVERSO
+  
+  proxy:
+    image: ubuntu/nginx
+    ports:
+      - "80:80"
+      - "443:443"
+    volumes:
+      - ./nginx/conf/nginx.conf:/etc/nginx/nginx.conf
+      - ./nginx/certs:/etc/nginx/certs
+    restart: always
+    depends_on:
+      - app
+      - brunoweb
+      - playwrightweb
+    networks:
+      - webnet
+
+networks:
+  webnet:
+    driver: bridge
+
+volumes:
+  redis-data:
+  postgres-data:
+  bruno-reports:
+  playwright-reports:
