--- a/Dockerfile-Render
+++ b/Dockerfile-Render
@@ -32,8 +32,8 @@ FROM mcr.microsoft.com/dotnet/sdk:10.0 AS publish
 ARG BUILD_CONFIGURATION=Release
 WORKDIR /src
 
-COPY --from=build /app/build . 
-RUN dotnet publish "dawazon2.0/dawazon2.0.csproj" -c $BUILD_CONFIGURATION -o /app/publish
+COPY --from=build /src/ ./
+RUN dotnet publish "dawazon2.0/dawazon2.0.csproj" -c $BUILD_CONFIGURATION -o /app/publish --no-build
 
 # STAGE 5: final - imagen minima solo para ejecutar la app
 FROM base AS final
